1.2.0p2:
    Checks & Agents:
    * FIX: Fixed syntax errors in a bunch of man pages
    * if_lancom: silently ignore Point-To-Point interfaces
    * if_lancom: add SSID to logical WLAN interface names

    Multisite:
    * Show number of rows and number of selected rows in header line
      (also for WATO hosts table)
    * FIX: fix problem in showing exceptions (due to help function)

    WATO: 
    * Main menu of ruleeditor (Host & Service Parameters) now has
      a topic for "Used rules" - a short overview of all non-empty
      rulesets.
    * FIX: add missing context help to host details dialog
    * FIX: set new site dirty is host move due to change of
      folder attributes
    * FIX: fix exception on unknown value in DropdownChoice

    BI:
    * New iterators FOREACH_CHILD and FOREACH_PARENT
    * FIX: fix handling of FOREACH_ in leaf nodes (remove hard coded
      $HOST$, replace with $1$, $2$, ..., apply argument substitution)

1.2.0p1:
    Core:
    * Added macros $DATE$, $SHORTDATETIME$ and $LONGDATETIME$' to
      notification macros

    Checks & Agents:
    * FIX: diskstat: handle output 'No Devices Found' - avoiding exception
    * 3ware_units: Following states now lead to WARNING state instead of
      CRITICAL: "VERIFY-PAUSED", "VERIFYING", "REBUILDING"
    * New checks tsm_stagingpools, tsm_drive and tsm_storagepools
      Linux/UNIX
    * hpux_fchba: new check for monitoring FibreChannel HBAs und HP-UX

    Multisite:
    * FIX: fix severe exception in all views on older Python versions
      (like RedHat 5.5).

    WATO:
    * FIX: fix order of rule execution: subfolders now take precedence
      as they should.

1.2.0:
    Setup:
    * FIX: fix building of RPM packages (due to mk_mysql, mk_postgres)

    Core:
    * FIX: fix error message in case of duplicate custom check

    WATO:
    * FIX: add missing icon on cluster hosts to WATO in Multisite views
    * FIX: fix search field in host table if more than 10 hosts are shown