@@ -1,0 +1,28 @@
+title: Check MSSQL tablespace size information
+agents: windows
+author: Lars Michelsen <lm@mathias-kettner.de>
+license: GPL
+distribution: check_mk
+description:
+ This check monitors sizes and usages of MSSQL tablespaces.
+
+ The check has been developed with MSSQL Server 2008 R2 but should
+ work with other versions too.
+
+ This check needs the Check_MK mssql.vbs -plugin installed in
+ the agent. Please refer to the online documentation
+ for how to install that plugin.
+
+item:
+ The MSSQL instance name and the tablespace name separated by a space.
+
+perfdata:
+ size: Total size of the database in bytes
+ unallocated: Unreserved space in the database in bytes
+ reserved: Space allocated by objects within the database in bytes
+ data: Bytes used for data
+ indexes: Bytes used for indexes
+ unused: Reserved space in bytes for objects but unused
+
+inventory:
+ One separate check for each tablespace will be created.
