@@ -3,6 +3,8 @@
     * FIX: Fixed syntax errors in a bunch of man pages
     * if_lancom: silently ignore Point-To-Point interfaces
     * if_lancom: add SSID to logical WLAN interface names
+    * Added a collection of MSSQL checks for monitoring MSSQL servers
+      (backups, tablespaces, counters)
 
     Multisite:
     * Show number of rows and number of selected rows in header line
